import React from "react";
import { shallow } from "enzyme";

import Nav from "./index";

const navItems = [
    {
        name: "Home",
        icon: "home"
    },
    {
        name: "Transactions",
        icon: "shopping_cart"
    },
    {
        name: "Notifications",
        icon: "notification_important"
    },
    {
        name: "Language",
        icon: "language"
    },
    {
        name: "Account",
        icon: "account_balance"
    },
    {
        name: "Authentication",
        icon: "fingerprint"
    }
];

const navItemsTwoLevels = [
    {
        name: "Home",
        icon: "home"
    },
    {
        name: "Transactions",
        icon: "shopping_cart",
        subItems: ["Purchase history", "Invoice"]
    },
    {
        name: "Notifications",
        icon: "notification_important"
    },
    {
        name: "Language",
        icon: "language"
    },
    {
        name: "Account",
        icon: "account_balance",
        subItems: ["Email", "Information", "Other things"]
    }
];

describe("Component: Nav - ", () => {
    it("is defined", () => {
        expect(Nav).toBeDefined();
    });

    it("Prop mode is required", () => {
        console.error = jest.fn();

        const wrapper = shallow(<Nav items={navItems} vertsize="xxxl" />);

        expect(console.error).toHaveBeenCalled();
        expect(wrapper).toMatchSnapshot();
    });

    it("renders", () => {
        const wrapper = shallow(<Nav items={navItems} />);

        expect(wrapper).toMatchSnapshot();
    });

    it("setActive prevents default", () => {
        const wrapper = shallow(<Nav items={navItems} />);

        expect(wrapper).toMatchSnapshot();
    });
});
